@@ -1,1 +1,5 @@
 # currency_convertor
+
+javac --module-path E:\javafx-sdk-21\lib --add-modules javafx.contols -cp .;C:\Users\USER\Documents\Vscode\CurrencyConverterGUI\gson-2.10.1.jar CurrencyConverterGUI.java
+
+java --module-path E:\javafx-sdk-21\lib --add-modules javafx.contols -cp .;C:\Users\USER\Documents\Vscode\CurrencyConverterGUI\gson-2.10.1.jar CurrencyConverterGUI.java
